manifest/service.yml
apiVersion: v1
kind: Service
metadata:
    name: hello-world-service
spec:
    selector:
        app: hello-world-pod
    ports:
        - name: hw-svc-port
          protocol: TCP
          port: 8080
          targetPort: 8080
