manifest/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: hello-world-ingress
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
    ingressClassName: nginx
    rules:
        - host: vanny96.hello-world
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: hello-world-service
                            port:
                                number: 8080
